--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: jkauppi <jkauppi@student.hive.fi>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/10/17 09:54:35 by jkauppi           #+#    #+#              #
-#    Updated: 2021/03/19 06:12:52 by jkauppi          ###   ########.fr        #
+#    Updated: 2021/03/27 12:02:46 by jkauppi          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,7 +26,7 @@ INCLUDES		=	-I $(INCLUDE)
 
 # Compiler and linking parameters
 CC				=	clang
-C_FLAGS			=	-std=gnu17 -g -Wall -Wextra -Werror $(INCLUDES)
+C_FLAGS			=	-fPIE -std=gnu17 -g -Wall -Wextra -Werror $(INCLUDES)
 
 # C (Source code) and H (Header) files
 SRC_C_FILES		=	ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c \
