Read puzzle map implemented.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,18 +9,8 @@
 			"name": "(gdb) Launch",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/fdf",
-			// "args": ["-f", "data/maps/42.fdf", "-P", "2"],
-			// "args": ["-f", "data/maps/42.fdf", "-P", "2", "-M", "2"],
-			// "args": ["-f", "data/maps/elem-col.fdf"],
-			// "args": ["-S", "2", "-F", "1", "data/maps/elem-fract.fdf"],
-			// "args": ["-f", "data/maps/cube.fdf", "-S", "300", "-F", "30", "-L", "0"],
-			// "args": ["-f", "data/maps/cube.fdf", "-S", "300", "-F", "30"],
-			"args": ["-f", "data/maps/cube.fdf", "-L", "2"],
-			// "args": ["<", "data/maps/42.fdf"],
-			// "args": ["-f", "data/maps/"],
-			// "args": ["-f"],
-			// "args": [],
+			"program": "${workspaceFolder}/bin/n_puzzle",
+			"args": ["-L", "0"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
 			"environment": [],
