--- a/src/influxdb/grafana.ini
+++ b/src/influxdb/grafana.ini
@@ -29,7 +29,7 @@
 #################################### Server ####################################
 [server]
 # Protocol (http, https, h2, socket)
-;protocol = http
+protocol = https
 
 # The ip address to bind to, empty will bind to all interfaces
 ;http_addr =
@@ -61,10 +61,8 @@
 ;enable_gzip = false
 
 # https certs & key file
-;cert_file =
-;cert_key =
-# ;cert_file = /etc/ssl/certs/influxdb-selfsigned.crt
-# ;cert_key = /etc/ssl/private/influxdb-selfsigned.key
+cert_file = /etc/ssl/certs/influxdb-selfsigned.crt
+cert_key = /etc/ssl/private/influxdb-selfsigned.key
 
 # Unix socket path
 ;socket =
