--- a/src/influxdb/influxdb.conf
+++ b/src/influxdb/influxdb.conf
@@ -223,8 +223,8 @@ reporting-enabled = false
   # bind-address = ":8086"
 
   # Determines whether user authentication is enabled over HTTP/HTTPS.
-  # auth-enabled = false
-  auth-enabled = true
+  auth-enabled = false
+#   auth-enabled = true
 
   # The default realm sent back when issuing a basic auth challenge.
   # realm = "InfluxDB"
@@ -553,9 +553,8 @@ reporting-enabled = false
 
   # Minimum version of the tls protocol that will be negotiated. If not specified, uses the
   # default settings from Go's crypto/tls package.
-  # min-version = "tls1.2"
+  min-version = "tls1.2"
 
   # Maximum version of the tls protocol that will be negotiated. If not specified, uses the
   # default settings from Go's crypto/tls package.
   # max-version = "tls1.2"
-  max-version = "tls1.3"
