TLS connection to an influxdb implemented.

--- a/lib/libft_addons/Makefile
+++ b/lib/libft_addons/Makefile
@@ -6,7 +6,7 @@
 #    By: jkauppi <jkauppi@student.hive.fi>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/08/21 11:50:38 by jkauppi           #+#    #+#              #
-#    Updated: 2021/03/27 12:18:07 by jkauppi          ###   ########.fr        #
+#    Updated: 2021/04/01 17:02:27 by jkauppi          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -29,7 +29,9 @@ SRC_C_FILES		=	ft_radian.c ft_max_int.c ft_min_int.c \
 					ft_matrix_x_vector_double.c \
 					ft_max_double.c ft_min_double.c ft_isdigit_base.c \
 					ft_strtoi.c ft_login_event_1.c ft_login_event_2.c \
-					ft_login_event_3.c ft_login_event_4.c ft_login_event_5.c
+					ft_login_event_3.c ft_login_event_4.c ft_login_event_5.c \
+					ft_openssl_init_ctx.c ft_openssl_init_client.c \
+					ft_openssl_init.c ft_openssl_connect.c
 SRC_H_FILES		=	libft_addons.h
 
 # Path folders for H, C, O and APP files
