--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/bin/n_puzzle",
-			"args": ["-L", "2", "-A", "dfs_2", "<", "data/3_3_02.map"],
+			"args": ["-L", "2", "-rA", "dfs_1", "<", "data/3_3_01.map"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
 			"environment": [],
