Preliminary version of Breadth first search.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
 			"request": "launch",
 			"program": "${workspaceFolder}/bin/n_puzzle",
 			// "args": ["-L", "2", "-rA", "dfs_1", "<", "data/3_3_01.map"],
-			"args": ["-L", "2", "-A", "dfs_3", "<", "data/3_3_03.map"],
+			// "args": ["-L", "2", "-A", "dfs_3", "<", "data/3_3_03.map"],
+			"args": ["-L", "2", "-A", "bfs_1", "<", "data/3_3_03.map"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
 			"environment": [],
