--- a/src/influxdb/docker-compose.yml
+++ b/src/influxdb/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./influxdb.conf:/etc/influxdb/influxdb.conf
       - ./influxdb-selfsigned.key:/etc/ssl/private/influxdb-selfsigned.key:ro
       - ./influxdb-selfsigned.crt:/etc/ssl/certs/influxdb-selfsigned.crt:ro
+      - ./plugins:/var/lib/grafana/plugins
     environment:
       - INFLUXDB_DB=${INFLUXDB_DB}
       - INFLUXDB_ADMIN_USER=${INFLUXDB_ADMIN_NAME}
