--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,17 +9,12 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/n-puzzle/bin/n_puzzle",
-			"args": ["-L", "2", "-A", "bfs_1"],
+			"args": ["-L", "2", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}/n-puzzle",
 			"environment": [],
 			"externalConsole": false,
 			"MIMode": "lldb",
-			"setupCommands": [
-                {
-                    "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_05.map"
-                }
-			]
 		}
 	]
 }
