B-tree implementation ongoing.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,16 +9,20 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/n-puzzle/bin/n_puzzle",
-			"args": ["-L", "2", "-A", "bfs_1"],
+			"args": ["-L", "2", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}/n-puzzle",
 			"environment": [],
 			"externalConsole": false,
-			"MIMode": "lldb",
+			// "MIMode": "lldb",
+			"MIMode": "gdb",
 			"setupCommands":
 			[
 				{
-					"text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_05.map"
+					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_05.map"
+					"description": "Enable pretty-printing for gdb",
+					"text": "-enable-pretty-printing",
+					"ignoreFailures": true
 				}
 			]
 		}
