--- a/n-puzzle/lib/libft_addons/Makefile
+++ b/n-puzzle/lib/libft_addons/Makefile
@@ -6,7 +6,7 @@
 #    By: jkauppi <jkauppi@student.hive.fi>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/08/21 11:50:38 by jkauppi           #+#    #+#              #
-#    Updated: 2021/04/21 12:38:52 by jkauppi          ###   ########.fr        #
+#    Updated: 2021/04/23 19:17:37 by jkauppi          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -43,7 +43,7 @@ SRC_C_FILES		=	ft_radian.c ft_max_int.c ft_min_int.c \
 					ft_openssl_init.c ft_openssl_connect.c \
 					ft_openssl_rel_conn.c ft_stack_push.c ft_stack_pop.c \
 					ft_enqueue.c ft_dequeue.c ft_is_queue_empty.c \
-					ft_bt_instert.c
+					ft_bt_instert.c ft_bt_print.c
 SRC_H_FILES		=	libft_addons.h
 
 # Path folders for H, C, O and APP files
