--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - '8086:8086'
       - '9999:9999'
     volumes:
-      - influxdb-storage:/var/lib/influxdb
+      - ./influxdb-storage:/var/lib/influxdb:rw
       - ./influxdb.conf:/etc/influxdb/influxdb.conf
       - ./influxdb-selfsigned.key:/etc/ssl/private/influxdb-selfsigned.key:ro
       - ./influxdb-selfsigned.crt:/etc/ssl/certs/influxdb-selfsigned.crt:ro
@@ -25,7 +25,7 @@ services:
     ports:
       - '127.0.0.1:8888:8888'
     volumes:
-      - chronograf-storage:/var/lib/chronograf
+      - ./chronograf-storage:/var/lib/chronograf:rw
     depends_on:
       - influxdb
     environment:
@@ -38,7 +38,7 @@ services:
     ports:
       - '3000:3000'
     volumes:
-      - grafana-storage:/var/lib/grafana
+      - ./grafana-storage:/var/lib/grafana:rw
       - ./grafana-provisioning/:/etc/grafana/provisioning
       - ./influxdb-selfsigned.key:/etc/ssl/private/influxdb-selfsigned.key:rw
       - ./influxdb-selfsigned.crt:/etc/ssl/certs/influxdb-selfsigned.crt:ro
@@ -46,9 +46,6 @@ services:
       - ./plugins:/var/lib/grafana/plugins
     depends_on:
       - influxdb
-    # environment:
-    #   - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
-    #   - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
   n_puzzle:
     build: .
     container_name: n_puzzle
@@ -64,7 +61,3 @@ services:
     entrypoint: tail -f /dev/null
     working_dir: /home/user/n-puzzle
     user: user
-volumes:
-  influxdb-storage:
-  chronograf-storage:
-  grafana-storage:
