--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,3 +1,36 @@
+// {
+// 	// Use IntelliSense to learn about possible attributes.
+// 	// Hover to view descriptions of existing attributes.
+// 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+// 	"version": "0.2.0",
+// 	"configurations": [
+// 		{
+// 			"name": "(lldb) Launch",
+// 			"type": "cppdbg",
+// 			"request": "launch",
+// 			"program": "${workspaceFolder}/n-puzzle/bin/n_puzzle",
+// 			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
+// 			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_01.map"],
+// 			"args": ["-L", "2", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
+// 			"stopAtEntry": false,
+// 			"cwd": "${workspaceFolder}/n-puzzle",
+// 			"environment": [],
+// 			"externalConsole": false,
+// 			// "MIMode": "lldb",
+// 			"MIMode": "gdb",
+// 			"setupCommands":
+// 			[
+// 				{
+// 					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_05.map"
+// 					"description": "Enable pretty-printing for gdb",
+// 					"text": "-enable-pretty-printing",
+// 					"ignoreFailures": true
+// 				}
+// 			]
+// 		}
+// 	]
+// }
+
 {
 	// Use IntelliSense to learn about possible attributes.
 	// Hover to view descriptions of existing attributes.
@@ -9,23 +42,19 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/n-puzzle/bin/n_puzzle",
-			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
-			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_01.map"],
-			"args": ["-L", "2", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
+			"args": ["-L", "1", "-A", "bfs_1"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}/n-puzzle",
 			"environment": [],
 			"externalConsole": false,
-			// "MIMode": "lldb",
-			"MIMode": "gdb",
+			"MIMode": "lldb",
 			"setupCommands":
 			[
 				{
-					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_05.map"
-					"description": "Enable pretty-printing for gdb",
-					"text": "-enable-pretty-printing",
-					"ignoreFailures": true
-				}
+					"text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_05.map"
+			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
+			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_01.map"],
+		}
 			]
 		}
 	]
