--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,7 +42,7 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/n-puzzle/bin/n_puzzle",
-			"args": ["-L", "1", "-A", "bfs_1"],
+			"args": ["-L", "2", "-A", "bfs_1"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}/n-puzzle",
 			"environment": [],
@@ -51,9 +51,8 @@
 			"setupCommands":
 			[
 				{
-					"text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_05.map"
-			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
-			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_01.map"],
+					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_05.map"
+					"text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_14.map"
 		}
 			]
 		}
