Implementation of a heurestic function "Tiles out of place" (TOOP) started.

--- a/n-puzzle/Makefile
+++ b/n-puzzle/Makefile
@@ -6,7 +6,7 @@
 #    By: jkauppi <jkauppi@student.hive.fi>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/08/21 11:50:38 by jkauppi           #+#    #+#              #
-#    Updated: 2021/05/05 06:45:38 by jkauppi          ###   ########.fr        #
+#    Updated: 2021/05/06 17:53:46 by jkauppi          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -76,7 +76,8 @@ SRC_C_FILES		=	loging_parameters.c arg_parser.c puzzle_map_1.c \
 					statistics_3.c \
 					influxdb_1.c tile.c \
 					dfs.c dfs_rand.c dfs_deeping.c dfs_deeping_mem.c \
-					puzzle_status_1.c puzzle_status_2.c bfs.c bfs_1.c
+					puzzle_status_1.c puzzle_status_2.c bfs.c bfs_1.c \
+					alg_toop.c alg_toop_1.c
 SRC_H_FILES		=	n_puzzle.h
 LOCAL_LIBS		=	libft_addons.a libftprintf.a libft.a
 GLOBAL_LIBS		=	libssl.a libcrypto.a libm.a
