Prio based on tiles_out_of_place implemented.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,8 @@
 			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
 			// "args": ["-L", "2", "-A", "dfs_3", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
 			// "args": ["-L", "2", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/4_4_05.map"],
-			"args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
+			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
+			"args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}/n-puzzle",
 			"environment": [],
