IDA* algorithm implemented.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,9 @@
 			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
 			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_22_2.map"],
 			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_01.map"],
-			"args": ["-L", "2", "-A", "a_star_t", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
+			// "args": ["-L", "2", "-A", "a_star_t", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
+			// "args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
+			"args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/3_3_xx.map"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}/n-puzzle",
 			"environment": [],
