Error handling improved.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,9 @@
 			// "args": ["-L", "2", "-A", "a_star_t", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
 			// "args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
 			// "args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/3_3_10.map"],
-			"args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/4_4_Not_Solvable_01.map"],
+			// "args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/4_4_Not_Solvable_01.map"],
+			// "args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data"],
+			"args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/Empty.map"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}/n-puzzle",
 			"environment": [],
