tiles_in_right_pos and current_tile_number implemented.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -71,7 +71,8 @@
 					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_xx.map"
 					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_14.map"
 					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_10.map"
-					"text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/5_5_01.map"
+					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/5_5_01.map"
+					"text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/9_9_01.map"
 					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/5_5_05.map"
 				}
 			]
